# nosql_labs

./: .env.local  .flake8  .gitignore  .labrc  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/scripts/: lab_number.sh
.github/workflows/: eventhub.yml
api/bruno/nosql_labs/: auth_logout.yml  event_create.yml  event_dislike.yml  event_like.yml  events_list.yml  health_with_cookie.yml  opencollection.yml  recommendations_list.yml  review_create.yml  reviews_list.yml  session_create.yml
api/postman/: nosql_labs.postman_collection.json
app/: main.py  security.py  settings.py
app/auth/: models.py  router.py
app/events/: dependencies.py  models.py  repository.py  router.py
app/health/: router.py
app/reactions/: dependencies.py  models.py  repository.py
app/recommendations/: cache.py  dependencies.py  graph.py  router.py
app/reviews/: dependencies.py  models.py  repository.py  router.py
app/sessions/: dependencies.py  router.py  service.py  store.py
app/users/: dependencies.py  models.py  repository.py  router.py
scripts/: cassandra-init.cql  cassandra-init.sh  mongo-init.sh
tests/: conftest.py  test_health_check.py  test_health_ckeck.py  test_session.py  test_users_auth_events.py
tools/bruno/nosql_labs/: auth_login.yml  auth_logout.yml  event_create.yml  events_list.yml  health_check.yml  review_update.yml  session_create.yml  user_register.yml
