[project]
name = "nosql-labs"
version = "0.1.0"
description = ""
authors = [
    {name = "zhozhyr",email = "zhozhyr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "pydantic-settings (>=2.13.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "pymongo (>=4.15.3,<5.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]

[tool.isort]
profile = "black"
line_length = 89
skip = [
    ".git",
    "__pycache__",
    ".github",
    ".labrc",
    "README.md",
    ".env.local",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    ".mypy_cache",
    ".pytest_cache"
]
